full VBM, atrophy, statistics, classification, and easyreg pipeline added to repo.

--- a/notebooks/01_preprocess_tissue_segments.ipynb
+++ b/notebooks/01_preprocess_tissue_segments.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,11 +62,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_directory = r'/Users/cu135/Partners HealthCare Dropbox/Calvin Howard/resources/datasets/MSA_Atrophy_Kurana/msa_niftis/mri'\n",
+    "base_directory = '/Users/cu135/Partners HealthCare Dropbox/Calvin Howard/DBS_Repositories/BWHRepository/CBCTLocalizations/BIDS/CbctDbs0468/derivatives/leaddbs/sub-CbctDbs0468/preprocessing/anat/mri'\n",
     "grey_matter_glob_name_pattern = '*mwp1*'\n",
     "white_matter_glob_name_pattern = '*mwp2*'\n",
     "csf_glob_name_pattern = '*mwp3*'"
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,9 +99,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Will search:,  /Users/cu135/Partners HealthCare Dropbox/Calvin Howard/DBS_Repositories/BWHRepository/CBCTLocalizations/BIDS/CbctDbs0468/derivatives/leaddbs/sub-CbctDbs0468/preprocessing/anat/mri/*mwp1*\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1/1 [00:00<00:00, 24.72it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downsampled grey_matter segment data \n",
+      " \n",
+      "Saved files to ['/Users/cu135/Partners HealthCare Dropbox/Calvin Howard/DBS_Repositories/BWHRepository/CBCTLocalizations/BIDS/CbctDbs0468/derivatives/leaddbs/sub-CbctDbs0468/preprocessing/anat/mri/mwp1sub-CbctDbs0468_ses-preop_desc-preproc_acq-iso_T1w_resampled.nii']\n",
+      "-------------------------------- \n",
+      "\n",
+      "Will search:,  /Users/cu135/Partners HealthCare Dropbox/Calvin Howard/DBS_Repositories/BWHRepository/CBCTLocalizations/BIDS/CbctDbs0468/derivatives/leaddbs/sub-CbctDbs0468/preprocessing/anat/mri/*mwp2*\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1/1 [00:00<00:00, 41.93it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downsampled white_matter segment data \n",
+      " \n",
+      "Saved files to ['/Users/cu135/Partners HealthCare Dropbox/Calvin Howard/DBS_Repositories/BWHRepository/CBCTLocalizations/BIDS/CbctDbs0468/derivatives/leaddbs/sub-CbctDbs0468/preprocessing/anat/mri/mwp2sub-CbctDbs0468_ses-preop_desc-preproc_acq-iso_T1w_resampled.nii']\n",
+      "-------------------------------- \n",
+      "\n",
+      "Will search:,  /Users/cu135/Partners HealthCare Dropbox/Calvin Howard/DBS_Repositories/BWHRepository/CBCTLocalizations/BIDS/CbctDbs0468/derivatives/leaddbs/sub-CbctDbs0468/preprocessing/anat/mri/*mwp3*\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1/1 [00:00<00:00, 38.17it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downsampled cerebrospinal_fluid segment data \n",
+      " \n",
+      "Saved files to ['/Users/cu135/Partners HealthCare Dropbox/Calvin Howard/DBS_Repositories/BWHRepository/CBCTLocalizations/BIDS/CbctDbs0468/derivatives/leaddbs/sub-CbctDbs0468/preprocessing/anat/mri/mwp3sub-CbctDbs0468_ses-preop_desc-preproc_acq-iso_T1w_resampled.nii']\n",
+      "-------------------------------- \n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from calvin_utils.vbm_utils.preprocessing import downsample_orchestrator\n",
     "output_paths = downsample_orchestrator(base_directory, \n",
@@ -125,7 +196,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python_3.7.7_nimlab",
+   "display_name": ".vbm_venv (3.10.18)",
    "language": "python",
    "name": "python3"
   },
@@ -139,7 +210,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.12"
+   "version": "3.10.18"
   },
   "orig_nbformat": 4
  },
